# pair-prgm-learn

./: README.md  aquire_moss.py  complete.prompt.jinia  generate_completement.py  generate_scaffold.py  pyproject.toml  report_stats.py  scaffold.prompt.jinia  scaffold.prompt.md
completement/: 1MHz_sqwave.ino  DCmotor01.ino  DCmotor02.ino  DCmotor03.ino  Gyro_rot_3axis.ino  INA226_Power_Sensor.ino  LoRaTX1.ino  MPPT.ino  OLED_voltmeter.ino  PWM_Signal.ino  Task1.ino  Task2_rec.ino  Task2_sen.ino  Task3_rec.ino  Task3_sen.ino  Task4_BLS.ino  Task4_OLED.ino  Task5_LoRaRX.ino  Timer_Example_signal.ino  blink.ino  button_basic.ino  button_interrupt.ino  button_polling.ino  buzzer.ino  fade.ino  light.ino  oled_simple.ino  qti.ino  servo_delay.ino  servo_millis.ino  simple_timer.ino  ultrasonic_delay.ino  ultrasonic_timedifference.ino
example/: 1MHz_sqwave.ino  DCmotor01.ino  DCmotor02.ino  DCmotor03.ino  Gyro_rot_3axis.ino  INA226_Power_Sensor.ino  LoRaTX1.ino  MPPT.ino  OLED_voltmeter.ino  PWM_Signal.ino  Task1.ino  Task2_rec.ino  Task2_sen.ino  Task3_rec.ino  Task3_sen.ino  Task4_BLS.ino  Task4_OLED.ino  Task5_LoRaRX.ino  Timer_Example_signal.ino  blink.ino  button_basic.ino  button_interrupt.ino  button_polling.ino  buzzer.ino  fade.ino  light.ino  oled_simple.ino  servo_delay.ino  servo_millis.ino  simple_timer.ino  ultrasonic_delay.ino  ultrasonic_timedifference.ino
scaffold/: 1MHz_sqwave.ino  DCmotor01.ino  DCmotor02.ino  DCmotor03.ino  Gyro_rot_3axis.ino  INA226_Power_Sensor.ino  LoRaTX1.ino  MPPT.ino  OLED_voltmeter.ino  PWM_Signal.ino  Task1.ino  Task2_rec.ino  (+21 more)
(+157 files in other folders)
